<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/ivPlayerPickedImage"
        android:layout_width="90dp"
        android:layout_height="70dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="16dp"
        android:background="#009688"
        android:contentDescription="@string/picked"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvMatchTime"
        app:srcCompat="@drawable/paper" />

    <ImageView
        android:id="@+id/ivComputerPickedImage"
        android:layout_width="90dp"
        android:layout_height="70dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="48dp"
        android:background="#009688"
        android:contentDescription="@string/computerpicked"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvMatchTime"
        app:srcCompat="@drawable/scissors" />

    <TextView
        android:id="@+id/tvVSGameHistory"
        android:layout_width="88dp"
        android:layout_height="76dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="sans-serif"
        android:text="@string/v_s"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="48sp"
        android:textStyle="bold|italic"
        android:typeface="normal"
        app:layout_constraintEnd_toStartOf="@+id/ivComputerPickedImage"
        app:layout_constraintStart_toEndOf="@+id/ivPlayerPickedImage"
        app:layout_constraintTop_toBottomOf="@+id/tvMatchTime" />

    <TextView
        android:id="@+id/tvWinLoseOrDraw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvMatchTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvWinLoseOrDraw" />

    <TextView
        android:id="@+id/tvPlayer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="56dp"
        android:text="@string/player"
        app:layout_constraintEnd_toStartOf="@+id/tvVSGameHistory"
        app:layout_constraintTop_toBottomOf="@+id/ivPlayerPickedImage" />

    <TextView
        android:id="@+id/tvComputer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="16dp"
        android:text="@string/computer"
        app:layout_constraintStart_toEndOf="@+id/tvVSGameHistory"
        app:layout_constraintTop_toBottomOf="@+id/ivComputerPickedImage" />

</androidx.constraintlayout.widget.ConstraintLayout>